[package]
name = "grrs"
version = "0.1.0"
authors = ["Hugo <57953645+hugo-k-m@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8.3"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1"